# MicroConfig

./: README.md  library.properties
.github/workflows/: arduino-lint.yml
docs/: userguide.md
examples/menu/: menu.ino
microconfig/: pyproject.toml
microconfig/src/microconfig/: __init__.py  communicator.py  configactions.py  configeditor.py  discover.py  interactors.py  microconfig.py  parameter.py  scanner.py  serialmonitor.py  terminal.py
pymicroconfig/: README.md  pyproject.toml
pymicroconfig/src/microconfig/: __init__.py  communicator.py  configactions.py  configeditor.py  discover.py  interactors.py  microconfig.py  parameter.py  spinbox.py  terminal.py  units.py  version.py
src/: Action.cpp  Action.h  Config.cpp  Config.h  Configurable.cpp  Configurable.h  ConfigurationMenu.cpp  ConfigurationMenu.h  Configurator.cpp  Configurator.h  FirmwareMenu.cpp  FirmwareMenu.h  FirmwareUpdate.cpp  FirmwareUpdate.h  HelpAction.cpp  HelpAction.h  InfoAction.cpp  InfoAction.h  Menu.cpp  Menu.h  MessageAction.cpp  MessageAction.h  MicroConfig.h  MicroConfigBanner.cpp  MicroConfigBanner.h  Parameter.cpp  Parameter.h
src/FlasherX/: FXUtil.cpp  FXUtil.h  FlashTxx.c  FlashTxx.h
utils/: serialmonitor.py
